[package]
name = "fjt"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
opt-level = 3

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
nb = "1.0.0"
jlink_rtt = "0.1.0"
alloc-cortex-m = "0.4.0"

[dependencies.heapless]
git = "https://github.com/japaric/heapless"
rev = "b15163b2347ac7d3a2c929b88778e62f5639a548"
features = ["serde"]

[dependencies.uom]
version = "0.30.0"
default-features = false
features = ["si", "f32", "autoconvert"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.stm32f4xx-hal]
version = "0.9.0"
features = ["stm32f413", "rt"]

[dependencies.components]
git = "https://github.com/ikazuya0201/mouse_components.git"
branch = "develop"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
