[package]
name = "fjt"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
opt-level = 3

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
jlink_rtt = "0.1.0"
micromath = "2.0.0"
typed-builder = "0.9.1"

[dependencies.spin]
version = "0.7.0"
default-features = false

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

[dependencies.uom]
version = "0.32.0"
default-features = false
features = ["si", "f32", "autoconvert"]

[dependencies.stm32f4xx-hal]
version = "0.9.0"
features = ["stm32f413", "rt"]

[dependencies.mousecore2]
# path = "../components/mousecore2"
git = "https://github.com/ikazuya0201/mouse_components.git"
branch = "master"

[dependencies.sensors2]
# path = "../components/sensors2"
git = "https://github.com/ikazuya0201/mouse_components.git"
branch = "master"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
